infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /photos
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 5000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
